--- a/css/panda.css
+++ b/css/panda.css
@@ -2,22 +2,40 @@
     margin: 0;
     font-family: sans-serif;
 }
-body {
-    background: url('../images/bamboo.jpg');
-    background-size: cover;
+
+html, body {
+    min-height: 100vh;
+    /* min-width: 100vw ; */
 }
-.container {
+
+body {
+    background: url(../images/bamboo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.container  {
     width: 80%;
     margin: 20px auto;
     max-width: 960px;
 }
+
 .text-center {
     text-align: center;
 }
+
 header h1 {
-    background: rgba(255, 255, 255, .7);
+    background: rgba(255,255,255,.7);
     padding: 20px 0;
 }
+
+header h1 a, header h1 a:hover, header h1 a:visited {
+    text-decoration: none;
+    color: #222;
+    display: block;
+    width: 100%;
+}
+
 main {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -38,6 +56,7 @@ main {
     -ms-flex-align: start;
     align-items: flex-start;
 }
+
 .block {
     -webkit-order: 0;
     -ms-flex-order: 0;
@@ -49,22 +68,29 @@ main {
     -ms-flex-item-align: auto;
     align-self: auto;
 }
+
 .tetris-wrap {
     width: 300px;
     height: 500px;
-    background: url('../images/back_field.png');
+    background: url(../images/back_field.png);
     margin: 0 auto;
     overflow: hidden;
 }
-.text-field {
-    background: rgba(255, 255, 255, .7);
+
+.text-field, .user-result, .main {
+    background: rgba(255,255,255,.7);
     margin: 20px 0;
     padding: 20px;
 }
+
+.user-result {
+    margin: 20px;
+}
+
 .start {
-    border: 1px solid #3d6e1c;
+    border: 2px solid #3d6e1c;
     box-shadow: 1px 1px 4px #c0c0c0;
-    background: #fff;
+    background-color: #fff;
     display: block;
     width: 50%;
     padding: 20px 30px;
@@ -73,18 +99,26 @@ main {
     background-repeat: no-repeat;
     background-position: 90% 50%;
 }
+
 .rule {
     margin-top: 30px;
 }
+
 .score-field {
     font-size: 42px;
     padding: 30px 0;
 }
+
+p a, p a:hover, p a:visited {
+    color: #222;
+}
+
 #tetris-field {
     width: 270px;
     height: 450px;
     margin: 25px 18px;
 }
+
 .white {
     width: 30px;
     height: 30px;
@@ -92,6 +126,7 @@ main {
     border-radius: 100%;
     float: left;
 }
+
 .orange {
     width: 30px;
     height: 30px;
@@ -99,6 +134,7 @@ main {
     border-radius: 100%;
     float: left;
 }
+
 .airbus {
     width: 30px;
     height: 30px;
@@ -106,6 +142,7 @@ main {
     border-radius: 100%;
     float: left;
 }
+
 .airbus2 {
     width: 30px;
     height: 30px;
@@ -113,6 +150,7 @@ main {
     border-radius: 100%;
     float: left;
 }
+
 .alcon {
     width: 30px;
     height: 30px;
@@ -120,10 +158,60 @@ main {
     border-radius: 100%;
     float: left;
 }
+
 .algonia {
     width: 30px;
     height: 30px;
     background: #8e43e7;
     border-radius: 100%;
     float: left;
+}
+
+.ai {
+    display: block;
+    max-width: 350px;
+    margin: 20px auto;
+}
+
+.form form {
+    border: 1px solid #070606;
+    padding: 20px;
+    margin: 20px auto;
+    font-size: 0;
+    box-sizing: border-box;
+}
+
+.form form h3 {
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+.form form input[type="text"] {
+    display: inline-block;
+    width: 46%;
+    padding: 5px;
+    margin: 1%;
+    font-size: 16px;
+}
+
+.form form input[type="submit"] {
+    display: inline-block;
+    width: 46%;
+    padding: 5px;
+    margin: 1%;
+    font-size: 16px;
+}
+
+.user-result ol li {
+    line-height: 150%;
+}
+
+.back a {
+    color: #222;
+    text-decoration: none;
+    display: inline-block;
+    margin: 20px auto;
+    padding: 5px 10px;
+    
+    background: rgba(255,255,255,.7);
 }
