--- a/Число над слайдером/style.css
+++ b/Число над слайдером/style.css
@@ -4,15 +4,16 @@
 .range {
     width: 300px;
     height: 50px;
-    border: 1px solid black;
     position: relative;
 }
 .range input[type="range"] {
     position: absolute;
     bottom: 0;
 }
-.range.range-num {
+.range .range-num {
     width: 20px;
     height: 20px;
-    border: 1px solid black;
+    position: absolute;
+    left: 0px;
+    top: 0;
 }
